@startuml
title Run Application - compact class diagram with key fields/methods

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "Environment" {
  class User <<actor>> {
    +openMap()
    +tapLogin()
    +tapStartRun()
  }

  class "GPS SDK" as GPS <<external>> {
    +streamPosition(): Position
  }

  class "Connectivity SDK" as Net <<external>> {
    +isOnline(): bool
  }

  class "Secure Storage" as Storage <<external>> {
    +read(key: String): String?
    +write(key: String, value: String): void
  }

  class "PostgreSQL + PostGIS" as DB <<external>> {
    +query(sql: String): ResultSet
    +execute(sql: String): int
  }
}

package "Flutter App (System)" {
  class MapPage {
    -authController: AuthController
    -runController: RunTrackerController
    +onLoginTap(): void
    +onRunToggle(): void
  }

  class AuthController {
    -authRepo: AuthRepository
    -isAuthenticated: bool
    +login(email: String, password: String): Future<void>
    +logout(): Future<void>
  }

  class RunTrackerController {
    -runsRepo: RunsRepository
    -isRunning: bool
    -points: List<RunPoint>
    +startRun(): void
    +finishRun(): Future<void>
  }

  interface AuthRepository {
    +login(email: String, password: String): Future<AuthTokens>
    +refreshToken(): Future<AuthTokens>
    +logout(): Future<void>
  }

  interface RunsRepository {
    +finishRun(points: List<RunPoint>): Future<RunFinishResponse>
    +getHistory(): Future<List<RunSummary>>
  }

  class AuthRepositoryImpl {
    -api: ApiClient
    +login(email: String, password: String): Future<AuthTokens>
    +refreshToken(): Future<AuthTokens>
    +logout(): Future<void>
  }

  class RunsRepositoryImpl {
    -api: ApiClient
    +finishRun(points: List<RunPoint>): Future<RunFinishResponse>
    +getHistory(): Future<List<RunSummary>>
  }

  class ApiClient {
    -tokenInterceptor: TokenInterceptor
    +get(path: String): Future<Response>
    +post(path: String, body: Object): Future<Response>
  }

  class TokenInterceptor {
    -storage: Storage
    +attachAccessToken(req: Request): Request
    +handle401AndRefresh(err: HttpError): Response
  }
}

package "Backend API (System)" {
  class AuthRouter <<router>> {
    -db: DB
    +login(req: LoginRequest): AuthTokens
    +refresh(req: RefreshRequest): AuthTokens
  }

  class RunsRouter <<router>> {
    -db: DB
    +finishRun(req: RunFinishRequest): RunFinishResponse
    +history(userId: UUID): List<RunSummary>
  }
}

' ===== Relations =====
User --> MapPage : uses

MapPage --> AuthController : association
MapPage --> RunTrackerController : association

AuthController ..> AuthRepository : dependency
RunTrackerController ..> RunsRepository : dependency

AuthRepositoryImpl ..|> AuthRepository : realization
RunsRepositoryImpl ..|> RunsRepository : realization

AuthRepositoryImpl ..> ApiClient : dependency
RunsRepositoryImpl ..> ApiClient : dependency
ApiClient ..> TokenInterceptor : dependency
TokenInterceptor ..> Storage : dependency

RunTrackerController ..> GPS : dependency
RunTrackerController ..> Net : dependency

ApiClient ..> AuthRouter : HTTP dependency
ApiClient ..> RunsRouter : HTTP dependency

AuthRouter --> DB : association (read/write)
RunsRouter --> DB : association (read/write)

@enduml
